# cw-5_hh-parser

./: README.md  pyproject.toml
src/: config.py  database.ini  database.py  db_manager.py  employer.py  hh_api.py  main.py  queries.sql  utils.py  vacancy.py
tests/: test_database.py  test_employer.py
