[tool.poetry]
name = "cw_5_hh-parser"
version = "0.1.0"
description = ""
authors = ["Maxim Zhdanov"]
readme = "README.md"
packages = [{include = "cw_5_hh_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"